--- a/clock.html
+++ b/clock.html
@@ -2,36 +2,56 @@
 <html>
 
 <head>
-  <link rel="stylesheet" href="clock.css">
+  <title>Clock</title> 
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+  <div id="center-box">
+    <div id="topp" class="center-horizontal">
+      <div id="case" class="center-all">
+        <div id="face" class="center-all">
+          <div id="indicator-container" class="center-all">
+            <div class="indicator"></div>
+            <div class="indicator"></div>
+            <div class="indicator"></div>
+            <div class="indicator"></div>
+            <div class="indicator"></div>
+            <div class="indicator"></div>
+            <div class="indicator"></div>
+            <div class="indicator"></div>
+          </div>
 
-  <div id="outer-circle" class="center">
-    <div id="face" class="center">
-      <div id="digits_container" class="center">
-        <div id="twelve" class="number center">12</div>
-        <div class="indicator"></div>
-        <div class="indicator"></div>
-        <div id="three" class="number center">3</div>
-        <div class="indicator"></div>
-        <div class="indicator"></div>
-        <div id="six" class="number center">6</div>
-        <div class="indicator"></div>
-        <div class="indicator"></div>
-        <div id="nine" class="number center">9</div>
-        <div class="indicator"></div>
-        <div class="indicator"></div>
+          <div id="numbers" class="center-all">
+            <span id="twelve" class="number">12</span>
+            <span id="three" class="number">3</span>
+            <span id="six" class="number">6</span>
+            <span id="nine" class="number">9</span>
+          </div>
+
+          <div id="hands" class="center-all">
+            <div id="hour" class="hand"></div>
+            <div id="sc" class="center-all">
+              <div id="second" class="hand"></div>
+            </div>
+            <div id="minute" class="hand"></div>
+
+            <div id="center-dot" class=""></div>
+          </div>
+        </div>
       </div>
+    </div>
 
-      <div id="second" class="hand center"></div>
-      <div id="minute" class="hand center"></div>
-      <div id="hour" class="hand center"></div>
-      <div id="center-dot" class="center"></div>
+    <div id="bottomm" class="center-all">
+      <div id="digital-case">
+        <div id="digital-face">
+          <div id="digital-time" class="center-all">00:00:00</div>
+        </div>
+      </div>
     </div>
   </div>
 
-  <script src="clock.js" defer></script>
+  <script src="script.js" defer></script>
 
 </body>
 
